--- a/index.html
+++ b/index.html
@@ -69,10 +69,9 @@
       <img class="foto__perfil" src="/recursos/perfil.jpg" alt="">
     </div>
     <div class="sobre_info">
-      <h1 class="sobre__h1">Hola, Me llamo Jhonatan y Desarrollo Aplicativos Web</h1>
-      <p class="sobre__parrafo">Soy Ingeniero Industrial, con diplomado en desarrollo de Software y Analítica de Datos,
-        actualmente participo en el proyecto de Oracle con Alura Latam, he desarrollado varios proyectos de carácter
-        personal y educativos</p>
+      <h1 class="sobre__h1">Desarrollo De Aplicativos Web</h1>
+      <p class="sobre__parrafo">Soy Ingeniero Industrial, con Diplomados en Desarrollo de Software y Analítica de Datos.
+        Actualmente participo en el proyecto de Oracle con Alura Latam.</p>
       <h2 class="sobre__h2">Redes Sociales 👇 Descarga Mi CV </h2>
       <ul>
         <li class="sobre__enlace"><a class="fa fa-github" href="https://github.com/JcalleA" target="_blank"></a></li>
@@ -89,16 +88,16 @@
   <section class="sobre__mi" id="sobre__mi">
     <h1>Sobre Mi</h1>
     <p>Con mi formación humana, académica y laboral centrada en el desarrollo tecnológico, la productividad y los
-      procesos industriales, junto con mi experiencia como Operador de Procesos en RIOPAILA CASTILLA S.A., he adquirido
+      procesos industriales, junto con mis
       habilidades sólidas en el campo del desarrollo de software, el análisis de datos, la logística y la gestión de
-      operaciones. Como próximo Ingeniero Industrial y con conocimientos en lenguajes de programación como Python, Java,
+      operaciones.
+      Con conocimientos en lenguajes de programación como Python, Java,
       SQL, HTML, CSS y JS para el desarrollo web, me apasiona enfrentar nuevos desafíos y aprender constantemente.
-      Además, mi experiencia como Operador de Procesos en la destilería y mi rol como Auxiliar de Innovación en Sucroal
-      S.A. me han brindado una visión integral de los procesos de producción y la capacidad para tomar decisiones,
+      Además, mi experiencia laboral me ha brindado una visión integral de los procesos de producción y la capacidad para tomar decisiones,
       gestionar equipos y resolver problemas. Mi enfoque en el trabajo en equipo, mi capacidad de liderazgo y mi empatía
       me permiten impulsar colaboraciones efectivas y lograr resultados sobresalientes. Estoy comprometido con el
       beneficio colectivo y personal, y siempre busco ampliar mis conocimientos para contribuir al desarrollo
-      tecnológico y la mejora continua en el campo industrial.</p>
+      tecnológico y la mejora continua.</p>
   </section>
   <section class="skills" id="skills">
     <h1>Skills</h1>
@@ -542,17 +541,16 @@
       <img src="/recursos/DESTILERIA.png" alt="" class="experiencia_img">
       <h1>Operador Procesos Industriales</h1>
       <h2>Enero 2015 a la Actualidad</h2>
-      <p>Operación y supervision del proceso de producción de alcohol carburante, en la sección de fermentación, manejo
-        de PLC, análisis de datos, control de variables, toma de decisiones, manejo de químicos, preparación de
-        soluciones, operación de equipos de planta y de laboratorio entre otros.
-        Operacion en PTARI Y Cuarto de Control de procesos.</p>
+      <h2>9 Años</h2>
+      <p>Operación y supervision del proceso de producción de alcohol carburante.</p>
     </div>
     <div class="experiencia__tarjeta">
       <img src="/recursos/sucroal.png" alt="" class="experiencia_img">
       <h1>Auxiliar Innovacion</h1>
       <h2>Febrero 2013 a Enero 2015</h2>
-      <p>Operar planta piloto producción de ácido cítrico, análisis físico químicos, análisis microbiológicos,
-        preparación de soluciones, manejo de químicos, operación de equipos de producción, manejo material laboratorio.
+            <h2>2 Años</h2>
+
+      <p>Operacion y supervision del proceso de producción de ácido cítrico.
       </p>
     </div>
   </section>
