--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     </div>
   </header>
   <section class="sobre">
+    
     <div class="sobre__foto">
       <img class="foto__perfil" src="/recursos/perfil.jpg" alt="">
     </div>
@@ -87,17 +88,8 @@
   </section>
   <section class="sobre__mi" id="sobre__mi">
     <h1>Sobre Mi</h1>
-    <p>Con mi formación humana, académica y laboral centrada en el desarrollo tecnológico, la productividad y los
-      procesos industriales, junto con mis
-      habilidades sólidas en el campo del desarrollo de software, el análisis de datos, la logística y la gestión de
-      operaciones.
-      Con conocimientos en lenguajes de programación como Python, Java,
-      SQL, HTML, CSS y JS para el desarrollo web, me apasiona enfrentar nuevos desafíos y aprender constantemente.
-      Además, mi experiencia laboral me ha brindado una visión integral de los procesos de producción y la capacidad para tomar decisiones,
-      gestionar equipos y resolver problemas. Mi enfoque en el trabajo en equipo, mi capacidad de liderazgo y mi empatía
-      me permiten impulsar colaboraciones efectivas y lograr resultados sobresalientes. Estoy comprometido con el
-      beneficio colectivo y personal, y siempre busco ampliar mis conocimientos para contribuir al desarrollo
-      tecnológico y la mejora continua.</p>
+    <p>
+Desde que escribí mi primer código, supe que estaba destinado a explorar el fascinante mundo de la programación. Me emociona enfrentar desafíos técnicos y trabajar en proyectos que marquen la diferencia en la vida de las personas. Creo firmemente en el poder de la tecnología para impulsar el cambio positivo y mejorar la forma en que vivimos, trabajamos y nos relacionamos.</p>
   </section>
   <section class="skills" id="skills">
     <h1>Skills</h1>
@@ -472,6 +464,18 @@
         <h3>2022 UTP</h3>
       </div>
     </div>
+    <div class="formacion__slider">
+  <div>
+    <img src="/recursos/png_20230702_021252_0000.png" alt="Certificado 1">
+  </div>
+  <div>
+    <img src="certificado2.jpg" alt="Certificado 2">
+  </div>
+  <div>
+    <img src="certificado3.jpg" alt="Certificado 3">
+  </div>
+</div>
+
     <div class="formacion__container cursos">
       <div class="formacion__tarjeta__cursos">
         <img class="formacion__img" src="/recursos/google.png" alt="">
