--- a/index.html
+++ b/index.html
@@ -464,19 +464,22 @@ Desde que escribí mi primer código, supe que estaba destinado a explorar el fa
         <h3>2022 UTP</h3>
       </div>
     </div>
+    <h1>Hard Skills</h1>
     <div class="formacion__slider">
+      
   <div>
-    <img src="/recursos/png_20230702_021252_0000.png" alt="Certificado 1">
+    <img src="/recursos/certificados/programacion/Data Science Certificado Honores-1.png" alt="Certificado 1">
   </div>
   <div>
-    <img src="certificado2.jpg" alt="Certificado 2">
+    <img src="/recursos/certificados/programacion/Diplomado En Desarrollo De Software Todos Ciclos-1.png" alt="Certificado 2">
   </div>
   <div>
     <img src="certificado3.jpg" alt="Certificado 3">
   </div>
 </div>
 
-    <div class="formacion__container cursos">
+
+    <!-- <div class="formacion__container cursos">
       <div class="formacion__tarjeta__cursos">
         <img class="formacion__img" src="/recursos/google.png" alt="">
         <ol>
@@ -537,7 +540,7 @@ Desde que escribí mi primer código, supe que estaba destinado a explorar el fa
           <li>Entrenamiento Brigadas 2015</li>
         </ol>
       </div>
-    </div>
+    </div> -->
   </section>
   <section class="experiencia">
     <h1>Experiencia Profecional</h1>
